# esp32s3-waveshare27690-bsp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  README.md  idf_component.yml
.github/workflows/: build.yml
examples/display_lvgl_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/display_lvgl_demo/main/: CMakeLists.txt  idf_component.yml  kni_logo.c  kni_logo.h  main.c
include/bsp/: bsp.h
kni_ui/: CMakeLists.txt  README.md  idf_component.yml
kni_ui/include/kni_ui/: kni_ui.h
kni_ui/src/: kni_ui.c
priv_include/: bsp_private.h
src/: README.md  bsp.c  bsp_display.c  bsp_lvgl.c  bsp_touch.c
tools/: README.md  png2lvgl.py
